--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.jaredrummler:material-spinner:1.3.1'
+
+    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
     implementation 'com.github.florent37:materialtextfield:1.0.7'
     implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
